--- a/Trote/CSS2/Style5.css
+++ b/Trote/CSS2/Style5.css
@@ -1,29 +1,30 @@
 body{
     font-family: Arial, sans-serif;
-    background-color:rgb(0, 255, 242);
+    background-color:rgb(146, 96, 4);
     display: flex;
     justify-content: center;
-
     align-items: center;
+    height: 110vb;
 }
 header{
-    position:fixed;
+    position:absolute;
     top: 15px;
     background-color: blue;
-    font-size: 30px;
+    font-size: 25px;
     font-family: 'Times New Roman', serif;
 }
 .Paragrafos{
-    text-indent: 50px;
+    text-indent: 55px;
     align-items: center;
     justify-items: center;
     display:flexbox;
-    border-radius: 4%;
+    position:absolute;
+    border-radius: 5%;
     background-color: rgba(224, 224, 224, 0.685);
 }
 p{
     text-justify: center;
-    padding: 15px;
+    padding: 5px;
     padding-top: 30px;
 }
 
@@ -32,9 +33,32 @@ a{
     color: darkblue;
     text-decoration: none;
     position:absolute;
-    bottom: 25px;
-    padding: 5px;
+    right: 0px;
+    bottom:5px;
+    padding: 10px;
     font-size: 20px;
     border-radius: 10%;
     position: flexbox;
+}
+
+.laranja{
+    background-color: orange;
+}
+
+.blue{
+    background-color: blue;
+    color: white;
+}
+.preto{
+    background-color: black;
+    color: white
+}
+.verde {
+    background-color: green;
+}
+.roxo{
+    background-color: purple;
+}
+.vermelho{
+    background-color: red;
 }
