--- a/Trote/CSS2/StyleCalc.css
+++ b/Trote/CSS2/StyleCalc.css
@@ -100,6 +100,13 @@ H2 {
     width: 50%;
 }
 
+.coluna12 {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    width: 50%;
+}
+
+
 form {
     padding: 5px;
     background-color: rgba(134, 53, 53, 0.562);
