--- a/Trote/CSS2/StyleGinc.css
+++ b/Trote/CSS2/StyleGinc.css
@@ -26,7 +26,7 @@ header {
     border-radius: 5%;
     background-color: rgba(224, 224, 224, 0.685);
     padding-bottom: 5px;
-    height: 435vb;
+    height: 900vb;
 }
 
 p {
@@ -105,10 +105,13 @@ a {
     border-radius: 25px;
     background-color: rgba(255, 169, 56, 0.63);
     list-style: none;
-    padding: 15px;
     position: flex;
-    margin-right: 10px;
-    text-justify:auto;
+    justify-content: right;
+    padding-right: 10px;
+    padding-bottom: 19px;
+    padding-top: 10px;
+    margin-right: 150px;
+    margin-left: 150px;
 }
 .Lista3 {
     border-radius: 25px;
