--- a/Trote/CSS2/StyleCalc.css
+++ b/Trote/CSS2/StyleCalc.css
@@ -22,7 +22,7 @@ a {
 }
 
 H2 {
-    color: rgb(113, 169, 253);
+    color: rgb(10, 46, 99);
     font-family: Arial, sans-serif;
     background-color: rgba(255, 255, 255, 0.226);
     border-radius: 10px;
@@ -106,11 +106,18 @@ H2 {
     width: 50%;
 }
 
+.coluna13{
+    padding-top: 2%;
+    padding-bottom: 2%;
+    width: 50%;
+
+}
+
 
 form {
     padding: 5px;
-    background-color: rgba(134, 53, 53, 0.562);
-    border-radius: 5%;
+    background-color: rgba(121, 119, 119, 0.685);
+    border-radius: 10px;
 }
 
 .LinhaTexto {
