--- a/Trote/CSS2/StyleIntegr.css
+++ b/Trote/CSS2/StyleIntegr.css
@@ -1,9 +1,9 @@
 body {
     font-family: Arial, sans-serif;
     background-color: rgb(78, 228, 255);
-    display: flex;
+    display: flexbox;
     justify-content: center;
-    height: 1000vb;
+    height: 240vb;
     align-items: center;
 }
 
@@ -11,13 +11,13 @@ body {
 .Paragrafos {
     top: 20px;
     text-indent: 55px;
-    align-items: center;
+ 
     display: flexbox;
-    position: absolute;
+    padding: 15px;
     border-radius: 5px;
-    background-color: rgba(26, 57, 35, 0.356);
+    background-color: rgba(224, 224, 224, 0.685);
     padding-bottom: 5px;
-    height: 650vb;
+    height: 230vb;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -41,4 +41,13 @@ body {
 .lista2{
     list-style: none;
 
+}
+a {
+    background-color: gray;
+    color: darkblue;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 10%;
+    left: 150px; 
 }
